tests/fixtures/invalid/pow_none_set.py
# Cannot call pow() with None, Set[int]
x = pow(None, {1, 2, 3})
